# ResearchLineage

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATABASE_DOCUMENTATION.md  DATABASE_SCHEMA.md  Dockerfile.test  Locustfile.py  MODEL_DEVELOPMENT.md  PLAN.md  README.md  app.py  cloudbuild.yaml  convert_format.py  demo_cache_run.py  docker-compose.yml  init-db.sql  pyproject.toml  requirements.txt  setup_structure.sh  timeline_view.html  vercel.json
.dvc/: config
.github/workflows/: ci.yml  deploy-backend.yml  deploy.yml  model-comparison.yml  model-evaluation.yml  model-training.yml  rollback.yml
api/: index.py
archive/: training_dag.py
backend/: main.py  mock_data.py  tree_flatten.py
backend/tree_view/: __init__.py
dags/: compare_models.py  data_generation_pipeline.py  evaluate_performance.py  fine_tuning_data_pipeline.py  research_lineage_pipeline.py  retry_failed_pdfs_dag.py  training_dag.py
docker/: airflow.Dockerfile  backend.Dockerfile  requirements-training.txt  training.Dockerfile
filebeat/: filebeat.yml
frontend/: package-lock.json  package.json  vite.config.ts
kibana/: dashboard.ndjson  researchlineage_kibana.ndjson
load_tests/: report.html
migration/: README.md  endpoint_analysis.md  mapping.md
scripts/: check_fetch_pdf_failures_db.py  check_gcp_schema.py  create_airflow_db.py  debug_bad_records.py  debug_citations.py  debug_config.py  debug_db_cache.py  debug_forward.py  debug_full_pipeline.py  debug_graph.py  debug_inference.py  debug_pipeline.py  debug_validation.py  drop_schema.py  generate_kibana_objects.py  generate_timeline_view.py  init_db.py  init_gcp_db.py  modal_serve.py  modal_serve_70B.py  modal_train.py  notify.py  prepare_eval_data.py  query_local_db.py  run_evaluation.py  run_tests.sh  setup_kibana.sh  sync_feedback_elasticsearch.py  sync_finetuning_elasticsearch.py  test_anomaly_detection.py  test_bidirectional.py  test_data_acquisition.py  test_data_cleaning.py  test_data_validation.py  test_database_write.py  test_endpoints.py  test_feature_engineering.py  test_full_pipeline.py  test_graph_construction.py  test_openalex.py  (+4 more)
scripts/cli/: pdfs.py
serving/: Dockerfile  entrypoint.sh
src/: mlflow_utils.py
temp/: pdfs.py
temporary/: .env.example  Dockerfile  Dockerfile.custom  __init__.py  convert_to_messages.py  ft_airflow_tasks.py  ft_config.py  ft_custom_config.py  ft_custom_job.py  ft_custom_train.py  ft_data.py  ft_data_prep.py  ft_deploy_vertex.py  ft_infer.py  ft_lora_train.py  ft_model_garden.py  ft_vertex_job.py
terraform/: README.md  main.tf  outputs.tf  postgresql.tf  terraform.tfvars.template  variables.tf
tests/: conftest.py
timeline_view/: app.py  batch_run.py  cache.py  config.py  data_export.py  distribution.py  distribution_report.py  gcs_upload.py  gemini_analysis.py  logger_setup.py  main.py  pipeline.py  requirements.txt  seed_picker.py  semantic_scholar.py  tee_stdout.py  text_extraction.py
tree_view/: __init__.py  cache.py  tree_builder.py  utils.py  visualizer.py
(+194 files in other folders)
