[tool.poetry]
package-mode = false

[project]
name = "researchlineage"
version = "0.1.0"
description = ""
authors = [
    {name = "Smit Chandi",email = "smitchandi6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "apache-airflow (==2.8.1)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "redis (>=7.2.0,<8.0.0)",
    "great-expectations (>=1.12.3,<2.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "dvc (>=3.66.1,<4.0.0)",
    "mlflow (>=2.16.0,<3.0.0)",
    "google-cloud-artifact-registry (>=1.11.0,<2.0.0)",
    "openai (>=1.0.0,<2.0.0)",
    "matplotlib (>=3.8.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "black (==24.10.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "unit: unit tests (no external services)",
    "integration: integration tests (no external services, but chains multiple tasks)",
]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["F401", "F841", "F541", "W291", "W292", "W293", "E501", "E701", "E702", "E741"]

[tool.ruff.lint.per-file-ignores]
"dags/*.py" = ["E402"]
"scripts/*.py" = ["E402"]
"src/tasks/*.py" = ["E402"]
"tests/*.py" = ["E402"]
"tests/**/*.py" = ["E402"]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "scripts/",
    "dags/",
    "tests/",
]

[[tool.mypy.overrides]]
module = [
    "src.storage.gcs_client",
    "src.tasks.pdf_fetcher",
    "src.tasks.pdf_upload_task",
]
ignore_errors = true
